bot and admin part

--- a/tests/config.yml
+++ b/tests/config.yml
@@ -4,6 +4,6 @@ admin:
   email: admin@admin.com
   password: admin
 bot:
-  token: group_token
+  token: vk1.a.3ipLPNbikC7_qv5thVqEKM6jPwtVC-StIoBX-dT8d25ptJCfxLfcy_qyEBNe2QzNsxAXi6I3eQ9Kj7wdp0D0P_1CoT4Hzkgv-O6Ouj9WenB0Wx_uHjHaNLB6vJgNWX4KPoTNyyZvMsSymT9YZSsqEiEPNWXjekioAlU4TWo2-HJ4TjAOhlS4EOZvssUi-mREJZ_ReGG3_iYYlxwc2dS1Sw
   group_id: 1
 
