--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,6 @@ pytest-aiohttp==1.0.5
 pytest-asyncio==0.23.5
 PyYAML==6.0.1
 
-
 aiosignal==1.3.1
 apispec==6.5.0
 attrs==23.2.0
@@ -25,3 +24,5 @@ pluggy==1.4.0
 pycparser==2.21
 webargs==8.4.0
 yarl==1.9.4
+
+bcrypt~=4.3.0
